# dot

./: pyproject.toml
src/dot.egg-info/: PKG-INFO  SOURCES.txt
src/dot/models/: dense_optical_tracking.py  properties.py  simple_optical_flow.py
src/dot/utils/options/: base_options.py  test_cvo_options.py
