[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"


[project]
name = "dot"
version = "0.0.0"
authors = []
description = "DOT Fork for VSR Research"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/VinceHerfeld-Enhance/dot"
"Bug Tracker" = "https://github.com/VinceHerfeld-Enhance/dot/issues"

[tool.black]
line-length = 120

[tool.setuptools]
package-dir = {"" = "src"}
